update team info

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<div class="member-info">
 						<p>President<br>Co-Founder &amp; CTO</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/jean-philippe-beaudet-12472884/" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -225,9 +225,9 @@
 			<div class="circle-dashed exe-member exe-member-2">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>President<br>Co-Founder &amp; CTO</p>
+						<p>Vice President/CBDO<br>Co-Founder</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/ylvirtuba#" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -238,9 +238,9 @@
 			<div class="circle-dashed exe-member exe-member-3">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>President<br>Co-Founder &amp; CTO</p>
+						<p>COO / Co-Founder</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/mathieufanoni" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -251,9 +251,9 @@
 			<div class="circle-dashed exe-member exe-member-4">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>President<br>Co-Founder &amp; CTO</p>
+						<p>CFO</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/daniel-bastien-63583b6/" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -264,9 +264,9 @@
 			<div class="circle-dashed exe-member exe-member-5">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>President<br>Co-Founder &amp; CTO</p>
+						<p>CBDO</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/dominiqueforest/" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -277,14 +277,14 @@
 			<div class="circle-dashed exe-member exe-member-6">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>President<br>Co-Founder &amp; CTO</p>
+						<p>CAIO</p>
 						<div class="member-soicals">
 							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
-			<p>Ahmed Al-Bayati</p>
+			<p>In Process</p>
 		</div>
 	</div>
 	<h1>TECHNICAL TEAM</h1>
@@ -306,144 +306,170 @@
 			<div class="circle-dashed tech-member tech-member-2">
 				<div class="member-detail">
 					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
+						<p>Senior trooper developer</p>
 						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p>Yves Lamarre</p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-3">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p>Mathieu Fanoni</p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-4">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p>Daniel Bastien</p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-5">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p>Dominique-SébastienForest</p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-6">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-7">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-8">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-9">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-10">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-11">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<p></p>
-		</div>
-		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
-			<div class="circle-dashed tech-member tech-member-12">
-				<div class="member-detail">
-					<div class="member-info">
-						<p>Technical ICO<br>manager</p>
-						<div class="member-soicals">
-							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="http://beautifulprincess.000webhostapp.com/" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<p>Julia Fodor</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-3">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Senior trooper developer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Developer 2</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-4">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Senior trooper developer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Developer 3</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-5">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Front-end artists</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Eduard Dimitru</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-6">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>API ninja</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Alexandre Quessy</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-7">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Cloud<br>computing mad-genius network engineer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-8">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Decentralized Storage Wizard</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-9">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Devops Buccaneer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-10">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Zealot<br>Community Manager &amp; Evangelist</p>
+						<div class="member-soicals">
+							<a href="https://www.linkedin.com/in/ahmed-al-bayati-57840914" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Ahmed Al -Bayati</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-11">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Technical Writer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>John Popescu</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-12">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>AI guru’s</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-13">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Uncanny cryptographer</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
+		</div>
+		<div class="col col-xs-12 col-sm-6 col-md-4 col-lg-3">
+			<div class="circle-dashed tech-member tech-member-14">
+				<div class="member-detail">
+					<div class="member-info">
+						<p>Obsessive Data scientist</p>
+						<div class="member-soicals">
+							<a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>In process</p>
 		</div>
 	</div>
 </section>
@@ -453,13 +479,13 @@
 		<div class="col col-xs-12 col-sm-6 administrative-item">
 			<img src="images/administrative/1.png">
 			<div class="administrative-item-info">
-				<p>Accounting: BDO<br>(Canada-Gibralta)<br><span>www</span></p>
+				<p>Accounting: BDO (Canada-Gibralta)<br><span><a href="https://www.bdo.com" target="_blank">https://www.bdo.com</a></span></p>
 			</div>
 		</div>
 		<div class="col col-xs-12 col-sm-6 administrative-item">
 			<img src="images/administrative/2.png">
 			<div class="administrative-item-info">
-				<p>Legal: Fasken<br>Martineau Québec<br><span>www</span></p>
+				<p>Legal: Fasken Martineau Québec<br><span><a href="http://www.fasken.com" target="_blank">http://www.fasken.com</a></span></p>
 			</div>
 		</div>
 	</div>
@@ -478,7 +504,7 @@
 					</div>
 				</div>
 			</div>
-			<p>Jean-Philippe Beaudet</p>
+			<p>Montréal blockchain supercluster</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-2">
@@ -491,7 +517,7 @@
 					</div>
 				</div>
 			</div>
-			<p>Yves Lamarre</p>
+			<p>Montréal AI supercluster lead by Element AI</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-3">
@@ -504,7 +530,7 @@
 					</div>
 				</div>
 			</div>
-			<p>Mathieu Fanoni</p>
+			<p>Montreal AI &amp; Montreal AI Académie</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-4">
@@ -517,7 +543,7 @@
 					</div>
 				</div>
 			</div>
-			<p>Daniel Bastien</p>
+			<p>R&amp;D: CNRC-PARI</p>
 		</div>
 		<div class="col col-xs-12 col-sm-2">
 			<div class="circle-dashed adv-member adv-member-5">
@@ -530,7 +556,7 @@
 					</div>
 				</div>
 			</div>
-			<p>Dominique-SébastienForest</p>
+			<p>Université Laval</p>
 		</div>
 	</div>
 </section>
