--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
 <section id="advisory">
 	<h1>ADVISORY TEAM</h1>
 	<div class="row">
-		<div class="col col-xs-12 col-sm-2 offset-sm-1">
+		<div class="col col-xs-12 col-md-2 offset-md-1">
 			<div class="circle-dashed adv-member adv-member-1">
 				<div class="member-detail">
 					<div class="member-info">
@@ -506,7 +506,7 @@
 			</div>
 			<p>Montréal blockchain supercluster</p>
 		</div>
-		<div class="col col-xs-12 col-sm-2">
+		<div class="col col-xs-12 col-md-2">
 			<div class="circle-dashed adv-member adv-member-2">
 				<div class="member-detail">
 					<div class="member-info">
@@ -519,7 +519,7 @@
 			</div>
 			<p>Montréal AI supercluster lead by Element AI</p>
 		</div>
-		<div class="col col-xs-12 col-sm-2">
+		<div class="col col-xs-12 col-md-2">
 			<div class="circle-dashed adv-member adv-member-3">
 				<div class="member-detail">
 					<div class="member-info">
@@ -532,7 +532,7 @@
 			</div>
 			<p>Montreal AI &amp; Montreal AI Académie</p>
 		</div>
-		<div class="col col-xs-12 col-sm-2">
+		<div class="col col-xs-12 col-md-2">
 			<div class="circle-dashed adv-member adv-member-4">
 				<div class="member-detail">
 					<div class="member-info">
@@ -545,7 +545,7 @@
 			</div>
 			<p>R&amp;D: CNRC-PARI</p>
 		</div>
-		<div class="col col-xs-12 col-sm-2">
+		<div class="col col-xs-12 col-md-2">
 			<div class="circle-dashed adv-member adv-member-5">
 				<div class="member-detail">
 					<div class="member-info">
@@ -588,6 +588,94 @@
 		</div>
 		<div class="col col-xs-12 col-sm-6 col-md-3">
 			<div class="partner-bg partner-8"></div>
+		</div>
+	</div>
+</section>
+<section class="blogs-news">
+	<div class="row">
+		<div class="blog-col col col-xs-12 col-sm-12 col-lg-8">
+			<h1>BLOG</h1>
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<div class="blog">
+						<img src="images/blog/1.jpg">
+						<div class="blog-infos-container">
+							<div class="blog-infos">
+								<p class="blog-title">LOREM IPSUM</p>
+								<p class="blog-past">2 days ago</p>
+								<p class="blog-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="blog">
+						<img src="images/blog/2.jpg">
+						<div class="blog-infos-container">
+							<div class="blog-infos">
+								<p class="blog-title">LOREM IPSUM</p>
+								<p class="blog-past">2 days ago</p>
+								<p class="blog-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-6">
+					<div class="blog">
+						<img src="images/blog/3.jpg">
+						<div class="blog-infos-container">
+							<div class="blog-infos">
+								<p class="blog-title">LOREM IPSUM</p>
+								<p class="blog-past">2 days ago</p>
+								<p class="blog-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-6">
+					<div class="blog">
+						<img src="images/blog/4.jpg">
+						<div class="blog-infos-container">
+							<div class="blog-infos">
+								<p class="blog-title">LOREM IPSUM</p>
+								<p class="blog-past">2 days ago</p>
+								<p class="blog-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="news-col col col-xs-12 col-sm-12 col-lg-4">
+			<h1>NEWS</h1>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-12">
+					<div class="news">
+						<img src="images/news/1.jpg">
+						<div class="news-infos-container">
+							<div class="news-infos">
+								<p class="news-title">LOREM IPSUM</p>
+								<p class="news-past">2 days ago</p>
+								<p class="news-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-6 col-lg-12">
+					<div class="news">
+						<img src="images/news/2.jpg">
+						<div class="news-infos-container">
+							<div class="news-infos">
+								<p class="news-title">LOREM IPSUM</p>
+								<p class="news-past">2 days ago</p>
+								<p class="news-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </section>
@@ -640,6 +728,36 @@
 </div>
 </section>
 -->
+<footer>
+	<div class="row">
+		<div class="col col-xs-12 col-sm-12 col-md-6 follow-us">
+			<div class="row">
+				<div class="col col-sm-10">
+					<h1>FOLLOW US</h1>
+				</div>
+			</div>
+			<div class="row">
+				<div class="social-link col col-sm-2"><a href="https://www.facebook.com/Vn3t-186287608614206/" target="_blank"><i class="fa fa-facebook"></i></a></div>
+				<div class="social-link col col-sm-2"><a href="https://twitter.com/Vn3t1?lang=en" target="_blank"><i class="fa fa-twitter"></i></a></div>
+				<div class="social-link social-btn col col-sm-2"><a href="#" target="_blank"><i class="fa fa-btc"></i></a></div>
+				<div class="social-link col col-sm-2"><a href="https://medium.com/@vn3ttech/decentralized-marketplace-for-global-data-network-e94e4fa1707b" target="_blank"><i class="fa fa-medium"></i></a></div>
+				<div class="social-link col col-sm-2"><a href="https://www.youtube.com/channel/UCn0BOghrGyl61inu6XdFEpA" target="_blank"><i class="fa fa-youtube-play"></i></a></div>
+			</div>
+			<img src="images/logo-footer.png">
+			<button type="button">Become Affiliate</button>
+			<p>Copyright &copy; 2017  Vn3t.<br>All rights reserved.</p>
+		</div>
+		<div class="col col-xs-12 col-sm-12 col-md-5 offset-md-1 contact-us">
+			<h1>CONTACT US</h1>
+			<form id="contact_frm" onSubmit="return submit_contact_frm();">
+			<input type="text" id="username" name="username" placeholder="Your name" required>
+			<input type="email" id="useremail" name="useremail" placeholder="E-mail" required>
+			<textarea id="message" name="message" required placeholder="Your message"></textarea>
+			<button type=submit>SEND</button>
+			</form>
+		</div>
+	</div>
+</footer>
 <div id="work-in-progress"><div class="work-spinner"></div></div>
 <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="f504cac8-32a2-4341-9e49-a69d3a0e8452";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
 </body>
